2008-11-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-12-01
	* call fsm_.findRcmsStateListener()
	* requires EventFilter/Utilities V00-15-01

2008-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-00
	* protect against spurious storage manager discards (data & dqm)
	* protect actionPerformed(), monitoring(), watching(),
	customWebPage(), and halting() against access to resourceTable_
	pointer after it has been destroyed (on halting())

2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-00
	* add Kurt's changes
	* incorporate fuProcessId and fuGuid in message exchange with SM
	* fuID renamed to rbBufferID
	* requires EventFilter/Utilities V00-15-00
	* requires EventFilter/ShmBuffer V00-07-00

2008-10-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-04
	* requires EventFilter/Utilities V00-14-16
	* add StateMachine::rcmsStateListener() to infospace

2008-10-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-03
	* fix 'nbClient crash upon halting' problem:
	* add a binary semaphore to FUResourceBroker, plus lock()/unlock()
	methods
	* protect actionPeformed() and any occurence of 'delete
	resourceTable_' with these locks
	* also, set all values filled in actionPerformed() and
	monitoring() to 0 if resourceTable_ is NULL

2008-08-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-02
	* remove item-changed listener for 'runNumber' xdaq parameter:
	counters are appropriately reset in the respective state
	transitions.

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-00
	* don't handle restarted EPs, the FUShmReader does the work
	* fix counter nbSentEvents, count events written with
	several formats only once
	* remove nbAcceptedEvents (=nbSentEvents)
	* add nbPendingSMDiscards
	* remove all input* monitorables, rename output* -> *; remove
	ratio.
	
